--- a/perl6/doc/lib/Type/Seq.pod
+++ b/perl6/doc/lib/Type/Seq.pod
@@ -8,7 +8,7 @@
 
 A C<Seq> represents anything that can lazily produce a sequence of values. A
 C<Seq> is born in a state where iterating it will consume the values. However,
-calling .list on a Seq will return a List that is still lazy, but stores the
+calling .cache on a Seq will return a List that is still lazy, but stores the
 generated values for later access. The same is true when assigning a Seq to an
 array.
 
